--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -67,4 +67,88 @@ html {
     color: var(--content-p);
     font-family: var(--font-family);
     font-size: 10px;
+    padding: 1.2rem;
+}
+
+icon {
+    display: inline;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Text Input Component */
+.text-input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.85rem;
+
+    margin: 0.5rem;
+    height: auto;
+    width: 100%;
+
+    font-size: var(--paragraph-medium-size);
+    font-weight: var(--paragraph-medium-weight);
+    line-height: var(--paragraph-medium-line-h);
+
+    color: var(--content-p);
+}
+
+.text-input-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    border: none;
+    outline: none;
+    border-radius: 1rem;
+    padding: 1.2rem;
+
+    background-color: var(--bg-s);
+
+    font-size: var(--paragraph-medium-size);
+    font-weight: var(--paragraph-medium-weight);
+    line-height: var(--paragraph-medium-line-h);
+}
+
+.text-input-content:has(input:focus):not(:has(.text-input-error)) {
+    outline: 1.5px solid var(--content-p);
+}
+
+.text-input-container:has(.text-input-error) .text-input-content {
+    outline: 1.5px solid var(--accent-red);
+}
+
+.text-input-content input {
+    background-color: var(--bg-s);
+    border: none;
+    width: 100%;
+    color: var(--content-p);
+}
+
+.text-input-content input:focus {
+    background-color: none;
+    border: none;
+    outline: none;
+    color: var(--content-p);
+}
+
+.text-input-content input::placeholder {
+    color: var(--content-t);
+}
+
+.text-input-error {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+
+    width: 100%;
+
+    font-size: var(--paragraph-small-size);
+    font-weight: var(--paragraph-small-weight);
+    line-height: var(--paragraph-small-line-h);
+
+    color: var(--content-s);
+
+    gap: 0.5rem;
 }
