--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -82,7 +82,6 @@ icon {
     flex-direction: column;
     gap: 0.85rem;
 
-    margin: 0.5rem;
     height: auto;
     width: 100%;
 
@@ -172,5 +171,62 @@ icon {
     font-weight: var(--heading-small-weight);
     line-height: var(--heading-small-line-h);
 
+    color: var(--content-p);
+}
+
+/* Button Component */
+
+.button-container {
+    display: flex;
+    width: max-content;
+    height: max-content;
+}
+
+.button-content {
+    display: flex;
+    padding: 1.2rem 2rem;
+
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+
+    font-size: var(--label-medium-size);
+    font-weight: var(--label-medium-weight);
+    line-height: var(--label-medium-line-h);
+
+    outline: none;
+    border: none;
+    border-radius: 4rem;
+
+    transition:
+        border-radius 0.15s,
+        color 0.15s;
+}
+
+.button-container .icon {
+    font-size: 2.35rem;
+}
+
+.button-text {
+    padding: 0 1rem;
+}
+
+.primary-button-color {
+    background-color: var(--accent-oragen);
+    color: var(--content-inverse);
+}
+
+.secondary-button-color {
+    background-color: var(--content-inverse);
+    color: var(--accent-oragen);
+}
+
+.button-content:hover {
+    border-radius: 1.2rem;
+}
+
+.button-content.secondary-button-color:hover {
+    border-radius: 1.2rem;
     color: var(--content-p);
 }
