--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -283,3 +283,23 @@ icon {
 .iconoirbutton-content.iconoirbutton-color-s:hover {
     color: var(--content-p);
 }
+
+/* Title Component */
+.title-container {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+
+    gap: 0.8rem;
+
+    padding: 1.2rem;
+}
+
+.title-text {
+    font-size: 3.2rem;
+    font-weight: 800;
+}
+
+.title-icon {
+    width: 4.25rem;
+}
