--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -384,3 +384,63 @@ icon {
     color: var(--bg-s);
     padding: 0.5rem 1rem;
 }
+
+/* FloatBar/Button Component */
+
+.floatbar-container {
+    display: flex;
+    width: max-content;
+    height: max-content;
+
+    border: solid 0.15rem var(--border-color);
+    border-radius: 5.5rem;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.floatbarbutton-container {
+    display: flex;
+    width: max-content;
+    height: max-content;
+}
+
+.floatbarbutton-content {
+    display: flex;
+    padding: 1.75rem;
+
+    align-items: center;
+    justify-content: center;
+
+    background-color: transparent;
+    color: var(--content-p);
+
+    text-align: center;
+
+    outline: none;
+    border: none;
+    border-radius: 4rem;
+
+    transition:
+        color 0.1s,
+        background-color 0.1s;
+}
+
+.floatbarbutton-content .icon {
+    font-size: 2.5rem;
+    font-weight: var(--heading-small-weight);
+    line-height: var(--heading-small-line-h);
+}
+
+.floatbarbutton-content:hover {
+    color: var(--accent-oragen);
+}
+
+.floatbarbutton-active {
+    color: var(--content-inverse);
+    background-color: var(--accent-oragen);
+}
+
+.floatbarbutton-active:hover {
+    color: var(--content-inverse);
+    background-color: var(--accent-oragen);
+}
