--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -177,7 +177,7 @@ icon {
     border: none;
     outline: none;
     border-radius: 1rem;
-    padding: 1.2rem;
+    padding: 2rem;
 
     min-height: 12rem;
 
@@ -192,6 +192,7 @@ icon {
     background-color: var(--bg-s);
     border: none;
     width: 100%;
+    height: 12rem;
     color: var(--content-p);
 
     resize: none;
