--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -61,13 +61,26 @@
     font-size: 1.6rem;
 }
 
+#main {
+    width: 100%;
+    height: 100%;
+}
+
 html {
     display: inline;
     background-color: var(--bg-p);
     color: var(--content-p);
     font-family: var(--font-family);
     font-size: 10px;
-    padding: 1.2rem;
+    /* padding: 1.2rem; */
+
+    width: 100svw;
+    height: 100svh;
+}
+
+body {
+    width: 100%;
+    height: 100%;
 }
 
 icon {
