--- a/web/src/pages/form/style.css
+++ b/web/src/pages/form/style.css
@@ -36,6 +36,7 @@
     justify-content: start;
     align-items: center;
 
+    gap: 6.4rem;
     padding: 6.4rem 0 0 0;
 }
 
@@ -44,6 +45,6 @@
 }
 
 .form-page-children {
-    width: 100%;
+    width: 60%;
     height: 100%;
 }
