--- a/web/src/pages/form/style.css
+++ b/web/src/pages/form/style.css
@@ -9,7 +9,8 @@
 
 .form-page-decoration {
     display: flex;
-    flex-grow: 1.5;
+
+    width: 100%;
 
     border-radius: 2rem;
     border: none;
@@ -31,13 +32,14 @@
 .form-page-content {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+
+    width: 90%;
 
     justify-content: start;
     align-items: center;
 
-    gap: 6.4rem;
-    padding: 6.4rem 0 0 0;
+    gap: 6.4rem 0;
+    padding: 0 0 0 0;
 }
 
 .form-page-title {
@@ -45,6 +47,6 @@
 }
 
 .form-page-children {
-    width: 75%;
     height: 100%;
+    width: 75%;
 }
