--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -458,3 +458,28 @@ icon {
     color: var(--content-inverse);
     background-color: var(--accent-oragen);
 }
+
+/* Forms */
+.form-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    height: 100%;
+}
+
+.form-content {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+
+    justify-content: space-between;
+}
+
+.form-button {
+    align-self: center;
+}
+
+.form-footer {
+    align-self: center;
+}
