--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -483,3 +483,63 @@ icon {
 .form-footer {
     align-self: center;
 }
+
+/* Note Component */
+.note-container {
+    overflow: hidden;
+    background-color: var(--bg-s);
+    border: 0.25rem solid var(--bg-t);
+
+    border-radius: 2rem;
+    padding: 1rem;
+
+    width: fit-content;
+    height: fit-content;
+}
+
+.note-content {
+    resize: both;
+    overflow: auto;
+    position: relative;
+
+    top: -4.5rem;
+
+    display: flex;
+    flex-direction: column;
+
+    width: 270px;
+    height: 300px;
+
+    min-height: 200px;
+    min-width: 200px;
+
+    max-width: 550px;
+    max-height: 550px;
+}
+
+.note-title {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+
+    background-color: var(--bg-t);
+    color: var(--content-s);
+
+    left: -1rem;
+    top: -5.5rem;
+    width: calc(100% + 2rem);
+    height: 4.5rem;
+
+    justify-content: center;
+    align-items: center;
+
+    transition: top 0.15s ease-out;
+}
+
+.note-container:hover .note-title {
+    top: -1rem;
+}
+
+.note-container:hover .note-content {
+    top: 0rem;
+}
